--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Slide</title>
     <style>
-        /* Gaya dasar untuk carousel */
         .carousel {
             width: 100%;
             max-width: 600px;
@@ -18,8 +17,7 @@
             display: flex;
             transition: transform 1s ease;
         }
-
-        .carousel-images img {
+.carousel-images img {
             width: 100%;
             height: auto;
         }
@@ -41,3 +39,41 @@
             font-size: 18px;
             cursor: pointer;
         }
+
+        .prev:hover, .next:hover {
+            background-color: rgba(0, 0, 0, 0.8);
+        }
+    </style>
+</head>
+<body>
+
+<div class="carousel">
+    <div class="carousel-images">
+        <img src="https://via.placeholder.com/600x300/FF5733/FFFFFF?text=Slide+1" alt="Slide 1">
+        <img src="https://via.placeholder.com/600x300/33FF57/FFFFFF?text=Slide+2" alt="Slide 2">
+        <img src="https://via.placeholder.com/600x300/3357FF/FFFFFF?text=Slide+3" alt="Slide 3">
+    </div>
+
+    <div class="carousel-controls">
+        <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
+        <button class="next" onclick="moveSlide(1)">&#10095;</button>
+    </div>
+</div>
+
+<script>
+    let index = 0;
+
+    function moveSlide(step) {
+const slides = document.querySelectorAll('.carousel-images img');
+        index = (index + step + slides.length) % slides.length;
+        document.querySelector('.carousel-images').style.transform = `translateX(-${index * 100}%)`;
+    }
+
+    setInterval(() => {
+        moveSlide(1);
+    }, 3000);
+</script>
+
+</body>
+</html>
+```
