--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Slide</title>
+    <title>VpsKita.ID</title>
     <style>
         .carousel {
             width: 100%;
@@ -49,7 +49,7 @@
 
 <div class="carousel">
     <div class="carousel-images">
-        <img src="https://via.placeholder.com/600x300/FF5733/FFFFFF?text=Slide+1" alt="Slide 1">
+        <img src="https://ibb.co.com/z534fwT" alt="Slide 1">
         <img src="https://via.placeholder.com/600x300/33FF57/FFFFFF?text=Slide+2" alt="Slide 2">
         <img src="https://via.placeholder.com/600x300/3357FF/FFFFFF?text=Slide+3" alt="Slide 3">
     </div>
